--- a/LBP/src/CMakeLists.txt
+++ b/LBP/src/CMakeLists.txt
@@ -1,10 +1,16 @@
 set(
 	LBP_SOURCE_FILES
 	"${CMAKE_CURRENT_SOURCE_DIR}/main.cpp"
+	"${CMAKE_CURRENT_SOURCE_DIR}/Frame.cpp"
+	"${CMAKE_CURRENT_SOURCE_DIR}/Perceptron.cpp"
+	"${CMAKE_CURRENT_SOURCE_DIR}/Segmentation.cpp"
 	CACHE INTERNAL "" FORCE
 )
 
 set(
 	LBP_HEADER_FILES
+	"${CMAKE_CURRENT_SOURCE_DIR}/Frame.h"
+	"${CMAKE_CURRENT_SOURCE_DIR}/Perceptron.h"
+	"${CMAKE_CURRENT_SOURCE_DIR}/Segmentation.h"
 	CACHE INTERNAL "" FORCE
 )
